[package]
name = "async_graphql_telemetry_extension"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { git = "https://github.com/async-graphql/async-graphql", branch = "actix-web-v4" }
async-trait = "0.1"
tracing = "0.1"
serde = "1.0"
chrono = "0.4"
lazy_static = "1.4"
opentelemetry = { version = "0.11", features = ["metrics"] }

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }
